--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <input
                 required
                 id="productPrice"
-                type="text"
+                type="number"
                 placeholder="Price"
                 class="input input-bordered w-full"
               />
@@ -50,7 +50,7 @@
               <input
                 required
                 id="productImage"
-                type="text"
+                type="url"
                 placeholder="Image URL"
                 class="input input-bordered w-full"
               />
